Replace spaces with tabs.